--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.6",
     "highcharts": "^6.1.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "sirpackages": "^1.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
