--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.9",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1"
   },
@@ -21,12 +22,12 @@
     "@vue/cli-service": "~5.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "vue-template-compiler": "^2.6.14",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^3.3.1"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
