--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "fetch-s": "^1.3.1",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1"
   },
